<resources>
    <string name="app_name">Automated Attendance System</string>
    <string name="course_button_1">Course 101</string>
    <string name="course_button_2">Course 102</string>
    <string name="course_button_3">Course 103</string>
    <string name="course_button_4">Course 104</string>
    <string name="dateTime" />
    <string name="touchPhoneToReceiver">Tap your phone to the receiver</string>
    <string name="transferringStudentID">Transferring student id:</string>
    <string name="successText">Attendance taken for student id : </string>

    <!-- Sadiku Chan's part again and again-->
    <string name="student_signin">Welcome!</string>
    <string name="don_t_have_an_account">Don\'t Have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="user_id_hint">Enter your user id</string>
    <string name="password_hint">Password</string>
    <string name="log_in_button">LOG IN</string>
    <string name="log_in_sign_up">REGISTER</string>
    <string name="username_signup">Enter your username</string>
    <string name="password_signup">Password</string>
    <string name="confirm_password_signup">Confirm Password</string>
    <string name="user_id_signup">Enter your user id</string>

    <!-- End of sadiku chan -->

    <string name="congratulationsText">Congratulations!</string>
    <string name="newUserInfo">New user created with the following info:</string>
    <string name="newUserName" />
    <string name="newUserId" />
    <string name="newUserPassword" />
    <string name="loginButton">Log In</string>
    <string name="adminMode"><u>Admin?</u></string>
    <string name="title_activity_admin_login">Sign in</string>
    <string name="adminIdHint">Your username, Master</string>
    <string name="adminPasswordHint">Your password, Master</string>


</resources>