<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeScreenActivity">


    <TextView
        android:id="@+id/StudentSignIn"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="144dp"
        android:paddingTop="8dp"
        android:text="@string/student_signin"
        android:textAlignment="center"
        android:textSize="18sp"
        android:fontFamily="@font/product_sans_regular"
        android:background="#80DEEA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/StudentImage"
        android:layout_width="200dp"
        android:layout_height="130dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:onClick="gotoLoginScreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StudentSignIn"
        app:srcCompat="@drawable/student" />

    <TextView
        android:id="@+id/notHaveAccountMessage"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/don_t_have_an_account"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:fontFamily="@font/product_sans_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StudentImage" />

    <Button
        android:id="@+id/SignUp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/product_sans_regular"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:background="@drawable/ripple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notHaveAccountMessage" />

</android.support.constraint.ConstraintLayout>