<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminLogin">

    <ImageView
        android:id="@+id/adminIcon"
        android:layout_width="200dp"
        android:layout_height="125dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/admin_icon_1" />

    <EditText
        android:id="@+id/adminIdText"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginEnd="76dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:fontFamily="@font/product_sans_regular"
        android:hint="@string/adminIdHint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminIcon" />

    <EditText
        android:id="@+id/adminPasswordText"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginEnd="76dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:fontFamily="@font/product_sans_regular"
        android:hint="@string/adminPasswordHint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminIdText" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/ripple"
        android:fontFamily="@font/product_sans_regular"
        android:onClick="goToViewStudentDatabase"
        android:text="@string/log_in_button"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminPasswordText" />

    <ImageView
        android:id="@+id/userIdIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toStartOf="@+id/adminIdText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminIcon"
        app:srcCompat="@drawable/userid_icon" />

    <ImageView
        android:id="@+id/passwordIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/adminPasswordText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminIdText"
        app:srcCompat="@drawable/password_icon" />


</android.support.constraint.ConstraintLayout>